# cli-calculator

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  context7.json  qodana.yaml  release-notes-generator.prompt.yml  snapcraft.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pr_template1.md
.github/workflows/: cleanup.yml  cmake-single-platform-mac.yml  cmake-single-platform-win.yml  cmake-single-platform.yml  lint.yml  qodana_code_quality.yml  release-all-os.yml  release.yml  test.yaml
cmake/: run_with_expectations.cmake
debian/: changelog  control  copyright  rules
snap/gui/: cli-calculator.desktop
src/: CMakeLists.txt  ansi_colors.hpp  divisors  divisors.cpp  main.cpp
src/app/: calculator_app.cpp  calculator_app.hpp  cli_actions.cpp  cli_actions.hpp  cli_batch.cpp  cli_batch.hpp  cli_commands.cpp  cli_commands.hpp  cli_numeric.cpp  cli_numeric.hpp  cli_output.cpp  cli_output.hpp  cli_parser.cpp  cli_parser.hpp  cli_repl.cpp  cli_repl.hpp  menu_handlers.cpp  menu_handlers.hpp
src/core/: divisors.hpp  divisors_lib.cpp  equations.cpp  equations.hpp  expression.cpp  expression.hpp  expression_bigdouble.cpp  expression_bigint.cpp  expression_eval.cpp  expression_internal.hpp  expression_rpn.cpp  expression_tokenize.cpp  graph_png.cpp  graph_png.hpp  input.cpp  input.hpp  math_utils.cpp  math_utils.hpp  matrix.cpp  matrix.hpp  numeral_conversion.cpp  numeral_conversion.hpp  parse_utils.cpp  parse_utils.hpp  prime_factors.cpp  prime_factors.hpp  statistics.cpp  statistics.hpp  unit_conversion.cpp  unit_conversion.hpp  variables.cpp  variables.hpp
src/gui/: main.cpp  main_window.cpp  main_window.hpp  main_window_helpers.cpp  main_window_ui_setup.cpp  matrix_editor.cpp  matrix_editor.hpp
src/tools/: divisors.cpp
tests/: CMakeLists.txt  test_conversion.cpp  test_divisors.cpp  test_equations.cpp  test_errors.cpp  test_expression.cpp  test_unit_conversions.cpp
